cube/pihole.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: primary-dns-tcp
  namespace: pihole
spec:
  selector:
    app: pihole
    version: primary
  ports:
    - name: dns
      port: 53
      targetPort: 53
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: primary-dns-udp
  namespace: pihole
spec:
  selector:
    app: pihole
    version: primary
  ports:
    - name: dns
      port: 53
      targetPort: 53
      protocol: UDP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: primary-http
  namespace: pihole
spec:
  selector:
    app: pihole
    version: primary
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary
  namespace: pihole
  labels:
    app: pihole
    namespace: pihole
    version: primary
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: "pihole.miles-homelab.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: primary-http
                port:
                  number: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: primary
  namespace: pihole
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pihole
      version: primary
  template:
    metadata:
      labels:
        app: pihole
        version: primary
    spec:
      nodeSelector:
        kubernetes.io/role: worker
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "2"
          volumeMounts:
            - name: pihole-etc-pihole
              mountPath: /etc/pihole
            - name: pihole-etc-dnsmasq-d
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole-etc-pihole
          persistentVolumeClaim:
            claimName: pihole-etc-pihole
        - name: pihole-etc-dnsmasq-d
          persistentVolumeClaim:
            claimName: pihole-etc-dnsmasq-d
