cube/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: traefik-dashboard.local
      http:
        paths:
          - path: /dashboard/
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
